force-app/main/default/objects/Contact/fields/I_RS_Manager__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who will inherit access to this individuals Project and Funding Opportunity data</description>
    <label>Manager User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Subordinates</relationshipName>
    <type>Lookup</type>
</CustomField>