force-app/main/default/objects/Contact/fields/I_RS_Manager_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Manager_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact who is manager of this person. Is based from Manager Staff Id field. May or may not have a user attached.</description>
    <label>Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Subordinates</relationshipLabel>
    <relationshipName>Subordinate_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>