force-app/main/default/objects/Contact/fields/I_RS_Manager_Staff_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Manager_Staff_ID__c</fullName>
    <label>Manager Staff ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>