force-app/main/default/objects/Contact/fields/I_RS_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Middle_Name__c</fullName>
    <description>Middle Name</description>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>