force-app/main/default/objects/Contact/fields/I_RS_ORCID_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_ORCID_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <inlineHelpText>This is the “Open Researcher and Contributor ID”, please fill in the following format xxxx-xxxx-xxxx-xxxx (if applicable).</inlineHelpText>
    <label>ORCID ID</label>
    <length>19</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>