force-app/main/default/objects/Contact/fields/I_RS_Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Organisation_Name__c</fullName>
    <description>Stores name of Contact&apos;s Organisation. Used in Budget Calculator when searching for Contacts.</description>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Stores name of Contact&apos;s Organisation.</inlineHelpText>
    <label>Organisation Name</label>
    <type>Text</type>
</CustomField>