force-app/main/default/objects/Contact/fields/I_RS_Preferred_First_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Preferred_First_Name__c</fullName>
    <description>Preferred First Name</description>
    <label>Preferred First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>