force-app/main/default/objects/Contact/fields/I_RS_Preferred_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Preferred_Full_Name__c</fullName>
    <formula>I_RS_Preferred_First_Name__c + &apos; &apos; +  I_RS_Preferred_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Full Name</label>
    <type>Text</type>
</CustomField>