force-app/main/default/objects/Contact/fields/I_RS_Preferred_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Preferred_Last_Name__c</fullName>
    <description>Preferred last name</description>
    <label>Preferred Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>