force-app/main/default/objects/Contact/fields/I_RS_Preferred_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Preferred_Middle_Name__c</fullName>
    <description>Preferred middle name</description>
    <label>Preferred Middle Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>