force-app/main/default/objects/Contact/fields/I_RS_Preferred_Title__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Preferred_Title__c</fullName>
    <label>Preferred Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>