force-app/main/default/objects/Contact/fields/I_RS_Related_User__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Related_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refers to the user record associated to the contact</description>
    <label>Related User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>