force-app/main/default/objects/Contact/fields/I_RS_Residency_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Residency_Status__c</fullName>
    <inlineHelpText>International Student Lead is a candidate that is NOT an Australian citizen/New Zealand citizen/ Permanent Resident of Australia / Permanent humanitarian visa holder.</inlineHelpText>
    <label>Residency / Citizenship Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Australian Citizen</fullName>
            </value>
            <value>
                <fullName>New Zealand Citizen</fullName>
            </value>
            <value>
                <fullName>Permanent resident of Australia</fullName>
                <label>Permanent Resident Of Australia</label>
            </value>
            <value>
                <fullName>Permanent Humanitarian Visa Holder</fullName>
            </value>
            <value>
                <fullName>International Student or temporary entry visa holder</fullName>
                <label>International Student Or Temporary Entry Visa Holder</label>
            </value>
            <value>
                <fullName>Overseas Student Residing Overseas</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>