force-app/main/default/objects/Contact/fields/I_RS_Salary_Grade__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Salary_Grade__c</fullName>
    <label>Salary Grade (HR)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level A 1</fullName>
            </value>
            <value>
                <fullName>Level A 2</fullName>
            </value>
            <value>
                <fullName>Level A 3</fullName>
            </value>
            <value>
                <fullName>Level A 4</fullName>
            </value>
            <value>
                <fullName>Level A 5</fullName>
            </value>
            <value>
                <fullName>Level A 6</fullName>
            </value>
            <value>
                <fullName>Level A 7</fullName>
            </value>
            <value>
                <fullName>Level A 8</fullName>
            </value>
            <value>
                <fullName>Level B 1</fullName>
            </value>
            <value>
                <fullName>Level B 2</fullName>
            </value>
            <value>
                <fullName>Level B 3</fullName>
            </value>
            <value>
                <fullName>Level B 4</fullName>
            </value>
            <value>
                <fullName>Level B 5</fullName>
            </value>
            <value>
                <fullName>Level B 6</fullName>
            </value>
            <value>
                <fullName>Level C 1</fullName>
            </value>
            <value>
                <fullName>Level C 2</fullName>
            </value>
            <value>
                <fullName>Level C 3</fullName>
            </value>
            <value>
                <fullName>Level C 4</fullName>
            </value>
            <value>
                <fullName>Level C 5</fullName>
            </value>
            <value>
                <fullName>Level C 6</fullName>
            </value>
            <value>
                <fullName>Level D 1</fullName>
            </value>
            <value>
                <fullName>Level D 2</fullName>
            </value>
            <value>
                <fullName>Level D 3</fullName>
            </value>
            <value>
                <fullName>Level D 4</fullName>
            </value>
            <value>
                <fullName>Level E 1</fullName>
            </value>
            <value>
                <fullName>HEO1-1</fullName>
            </value>
            <value>
                <fullName>HEO1-2</fullName>
            </value>
            <value>
                <fullName>HEO1-3</fullName>
            </value>
            <value>
                <fullName>HEO1-4</fullName>
            </value>
            <value>
                <fullName>HEO2-1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>