force-app/main/default/objects/Contact/fields/I_RS_Salary_Grade_Standard__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Salary_Grade_Standard__c</fullName>
    <description>The Standard non-HR version of Salary Grade, e.g. HEO1-1</description>
    <label>Salary Grade</label>
    <length>30</length>
    <type>Text</type>
</CustomField>