force-app/main/default/objects/Contact/fields/I_RS_School__c.field-meta.xml
<CustomField>
    <fullName>I_RS_School__c</fullName>
    <formula>/*Unit level*/
IF(
LEFT(Account.Parent.Parent.Parent.ParentId, 15) = LEFT($Label.La_Trobe_Account, 15),
Account.Parent.Parent.Name,


/*Dept level */
IF(
LEFT(Account.Parent.Parent.ParentId, 15) = LEFT($Label.La_Trobe_Account, 15),
Account.Parent.Name,



/* School level */
IF(
LEFT(Account.Parent.ParentId, 15) =  LEFT($Label.La_Trobe_Account, 15),
Account.Name,






&quot;&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School</label>
    <type>Text</type>
</CustomField>