force-app/main/default/objects/Contact/fields/I_RS_Staff_Sub_Group_Desc__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Staff_Sub_Group_Desc__c</fullName>
    <label>Staff SubGroup Description</label>
    <type>TextArea</type>
</CustomField>