force-app/main/default/objects/Contact/fields/I_RS_Student_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Student_Id__c</fullName>
    <externalId>true</externalId>
    <label>Student Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>