force-app/main/default/objects/Contact/fields/I_RS_Symplectic_User_ID__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Symplectic_User_ID__c</fullName>
    <externalId>true</externalId>
    <label>Symplectic User ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>