force-app/main/default/objects/Contact/fields/I_RS_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>La Trobe Researcher</fullName>
                <label>La Trobe Staff</label>
            </value>
            <value>
                <fullName>External Researcher</fullName>
            </value>
            <value>
                <fullName>Organisational Contact</fullName>
            </value>
            <value>
                <fullName>La Trobe Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>