force-app/main/default/objects/Contact/fields/I_RS_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Unique_Identifier__c</fullName>
    <label>Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>