force-app/main/default/objects/Contact/fields/I_ST_Aboriginal_Torres_Strait_Islander__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Aboriginal_Torres_Strait_Islander__c</fullName>
    <description>A person of Aboriginal or Torres Strait Islander descent who identifies as an Aboriginal or Torres Strait Islander and is accepted by the community in which person lives.</description>
    <label>Aboriginal and Torres Strait Islander</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Aboriginal_Torres_Strait_Islander</valueSetName>
    </valueSet>
</CustomField>