force-app/main/default/objects/Contact/fields/I_ST_ACS_ID__c.field-meta.xml
<CustomField>
    <fullName>I_ST_ACS_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Guid</inlineHelpText>
    <label>ACS ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>