force-app/main/default/objects/Contact/fields/I_ST_Adjustment_Score__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Adjustment_Score__c</fullName>
    <label>Adjustment Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>