force-app/main/default/objects/Contact/fields/I_ST_Adobe_External_Id__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Adobe_External_Id__c</fullName>
    <description>Used as unique id for IST- 269</description>
    <externalId>true</externalId>
    <label>Adobe External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>