force-app/main/default/objects/Contact/fields/I_ST_Allow_Duplicates__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Allow_Duplicates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Duplicates</label>
    <type>Checkbox</type>
</CustomField>