force-app/main/default/objects/Contact/fields/I_ST_Alumni_Flag__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Alumni_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for Account Management</description>
    <label>Alumni Flag</label>
    <type>Checkbox</type>
</CustomField>