force-app/main/default/objects/Contact/fields/I_ST_Aspire_Flag__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Aspire_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>refer IST-273</description>
    <label>Aspire Contact</label>
    <type>Checkbox</type>
</CustomField>