force-app/main/default/objects/Contact/fields/I_ST_Aspire_Status__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Aspire_Status__c</fullName>
    <description>This is a temporary field created to capture interest in Aspire until a solution for Aspire in available in Salesforce</description>
    <label>Aspire Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not qualified</fullName>
            </value>
            <value>
                <fullName>Aspire Applicant 2015</fullName>
            </value>
            <value>
                <fullName>Aspire Applicant 2016</fullName>
            </value>
            <value>
                <fullName>Aspire Applicant 2017</fullName>
            </value>
            <value>
                <fullName>Aspire Applicant 2018</fullName>
            </value>
            <value>
                <fullName>Aspire Applicant 2019</fullName>
            </value>
            <value>
                <fullName>Aspire Applicant 2020</fullName>
            </value>
            <value>
                <fullName>Aspire Applicant 2021</fullName>
            </value>
            <value>
                <fullName>Aspire Applicant 2022</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>