force-app/main/default/objects/Contact/fields/I_ST_Became_Alumni_On__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Became_Alumni_On__c</fullName>
    <description>I_ST_Became_Alumni_On__c populated on the stage change for contact. Added for IST-256</description>
    <label>Became Alumni On</label>
    <type>DateTime</type>
</CustomField>