force-app/main/default/objects/Contact/fields/I_ST_Became_Applicant_On__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Became_Applicant_On__c</fullName>
    <description>Date contact moved to applicant stage</description>
    <label>Became Applicant On</label>
    <type>DateTime</type>
</CustomField>