force-app/main/default/objects/Contact/fields/I_ST_Became_Inactive_On__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Became_Inactive_On__c</fullName>
    <label>Became Inactive On</label>
    <type>DateTime</type>
</CustomField>