force-app/main/default/objects/Contact/fields/I_ST_Became_Lead_On__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Became_Lead_On__c</fullName>
    <description>This is updated when stage is set to Lead for First time.</description>
    <label>Became Lead On</label>
    <type>DateTime</type>
</CustomField>