force-app/main/default/objects/Contact/fields/I_ST_Became_Student_On__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Became_Student_On__c</fullName>
    <description>Date when moved to Student</description>
    <label>Became Student On</label>
    <type>DateTime</type>
</CustomField>