force-app/main/default/objects/Contact/fields/I_ST_Calculate_Contact_Score__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Calculate_Contact_Score__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I ST Calculate Contact Score</label>
    <type>Checkbox</type>
</CustomField>