force-app/main/default/objects/Contact/fields/I_ST_Career_Area__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Career_Area__c</fullName>
    <description>Created for IST- 43 this field is dependent upon Study Interest</description>
    <label>Career Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_ST_Study_Interest__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>I_ST_Career_Interest</valueSetName>
    </valueSet>
</CustomField>