force-app/main/default/objects/Contact/fields/I_ST_Contact_Stage__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Contact_Stage__c</fullName>
    <description>Controlling Picklist for Status field - IST 51</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Contact_Stage</valueSetName>
    </valueSet>
</CustomField>