force-app/main/default/objects/Contact/fields/I_ST_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Contact_Status__c</fullName>
    <description>Dependent Picklist of controlling field Stage- IST 51</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_ST_Contact_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>I_ST_Contact_Status</valueSetName>
    </valueSet>
</CustomField>