force-app/main/default/objects/Contact/fields/I_ST_Course_Availability__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_Availability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Course Availabilities related to the selected Course Code.</inlineHelpText>
    <label>Course Availability</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>No courses available for the selected course</errorMessage>
        <filterItems>
            <field>CourseAvailability__c.L_AD_CourseInstance__r.L_AD_CourseParent__c</field>
            <operation>equals</operation>
            <valueField>$Source.I_ST_Course_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CourseAvailability__c</referenceTo>
    <relationshipLabel>Interested Leads</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>