force-app/main/default/objects/Contact/fields/I_ST_Course_Availability_Year__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_Availability_Year__c</fullName>
    <formula>I_ST_Course_Availability__r.L_AD_CourseInstance__r.L_AD_Course_Instance_Version_Year__c</formula>
    <inlineHelpText>This shows the Course Availability Year</inlineHelpText>
    <label>Course Instance Version Year</label>
    <type>Text</type>
</CustomField>