force-app/main/default/objects/Contact/fields/I_ST_Course_College__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_College__c</fullName>
    <formula>IF( ISBLANK( I_ST_Course_Availability__c ), &apos;N/A&apos;, I_ST_Course_Availability__r.L_AD_CourseInstance__r.L_AD_College_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Show the College for the Course selected in Course Availability</inlineHelpText>
    <label>College</label>
    <type>Text</type>
</CustomField>