force-app/main/default/objects/Contact/fields/I_ST_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Course the Lead is interested in.</description>
    <label>Course Code</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>CourseParent__c.L_AD_Course_Parent_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>CourseParent__c.L_AD_Course_Parent_Status__c</field>
            <operation>equals</operation>
            <value>active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CourseParent__c</referenceTo>
    <relationshipLabel>Interested Leads</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>