force-app/main/default/objects/Contact/fields/I_ST_Course_School__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_School__c</fullName>
    <formula>IF( ISBLANK( I_ST_Course_Availability__c ), &apos;N/A&apos;, I_ST_Course_Availability__r.L_AD_CourseInstance__r.I_ST_School_Name__c )</formula>
    <inlineHelpText>Shows the School from Course Availability</inlineHelpText>
    <label>School</label>
    <type>Text</type>
</CustomField>