force-app/main/default/objects/Contact/fields/I_ST_Course_Study_Period__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Course_Study_Period__c</fullName>
    <formula>TEXT(I_ST_Course_Availability__r.L_AD_Intake_Period__r.L_AD_Intake_Period_Name__c)</formula>
    <inlineHelpText>Shows the Course Availability&apos;s Intake Period</inlineHelpText>
    <label>Intake Period</label>
    <type>Text</type>
</CustomField>