force-app/main/default/objects/Contact/fields/I_ST_Deletion_Allowed__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Deletion_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Duplicate management through Live Chat</description>
    <label>Deletion Allowed</label>
    <type>Checkbox</type>
</CustomField>