force-app/main/default/objects/Contact/fields/I_ST_Distance_to_Campus__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Distance_to_Campus__c</fullName>
    <description>Created for Lead Scoring</description>
    <label>Distance to Campus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Postcode 0 - 15km Of Campus</fullName>
            </value>
            <value>
                <fullName>Postcode 15 - 30km Of Campus</fullName>
            </value>
            <value>
                <fullName>Postcode 30 - 50km Of Campus</fullName>
            </value>
            <value>
                <fullName>Postcode &gt;50km Of Campus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>