force-app/main/default/objects/Contact/fields/I_ST_Inactive_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Inactive_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added for IST-185. By passes validation rule users other than SACE Manager</description>
    <inlineHelpText>Set to Inactive when contact is marked as Inactive</inlineHelpText>
    <label>Activation Allowed?</label>
    <type>Checkbox</type>
</CustomField>