force-app/main/default/objects/Contact/fields/I_ST_Inferred_Time_Frame_to_Study__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Inferred_Time_Frame_to_Study__c</fullName>
    <label>Inferred Time Frame to Study</label>
    <length>255</length>
    <type>Text</type>
</CustomField>