force-app/main/default/objects/Contact/fields/I_ST_International_Student__c.field-meta.xml
<CustomField>
    <fullName>I_ST_International_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International Student</label>
    <type>Checkbox</type>
</CustomField>