force-app/main/default/objects/Contact/fields/I_ST_Is_Full_Time__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Is_Full_Time__c</fullName>
    <formula>I_ST_Course_Availability__r.L_AD_Domestic_Study_Modes_Full_Time__c</formula>
    <inlineHelpText>Shows if the course is full time</inlineHelpText>
    <label>Available Full Time</label>
    <type>Checkbox</type>
</CustomField>