force-app/main/default/objects/Contact/fields/I_ST_Is_Part_Time__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Is_Part_Time__c</fullName>
    <formula>I_ST_Course_Availability__r.L_AD_Domestic_Study_Modes_Part_Time__c</formula>
    <label>Available Part Time</label>
    <type>Checkbox</type>
</CustomField>