force-app/main/default/objects/Contact/fields/I_ST_Latest_Case_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Latest_Case_Created_Date__c</fullName>
    <label>Latest Case Created Date</label>
    <type>DateTime</type>
</CustomField>