force-app/main/default/objects/Contact/fields/I_ST_LatestApplicationStatusChangeDate__c.field-meta.xml
<CustomField>
    <fullName>I_ST_LatestApplicationStatusChangeDate__c</fullName>
    <label>Latest Application Status Change Date</label>
    <summarizedField>I_ST_Application__c.I_ST_Status_Change_Date__c</summarizedField>
    <summaryForeignKey>I_ST_Application__c.I_ST_Contact__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>