force-app/main/default/objects/Contact/fields/I_ST_LatestSelectedCourseRunDate__c.field-meta.xml
<CustomField>
    <fullName>I_ST_LatestSelectedCourseRunDate__c</fullName>
    <label>Latest Selected Course Run Date</label>
    <summarizedField>I_ST_Student_Course__c.I_ST_Selected_Course_Run_Date__c</summarizedField>
    <summaryForeignKey>I_ST_Student_Course__c.I_ST_Student__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>