force-app/main/default/objects/Contact/fields/I_ST_Lead_Age__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Lead_Age__c</fullName>
    <formula>IF(
  (BLANKVALUE(I_ST_Became_Applicant_On__c, NOW()) - I_ST_Became_Lead_On__c) &gt; 0,
  BLANKVALUE(I_ST_Became_Applicant_On__c, NOW()) - I_ST_Became_Lead_On__c,
  NOW() - I_ST_Became_Lead_On__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>