force-app/main/default/objects/Contact/fields/I_ST_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Lead_Id__c</fullName>
    <description>Unique Lead Identifier</description>
    <displayFormat>{YYYY}-{0000}</displayFormat>
    <label>Lead Id</label>
    <type>AutoNumber</type>
</CustomField>