force-app/main/default/objects/Contact/fields/I_ST_Lead_Source_Category__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Lead_Source_Category__c</fullName>
    <description>This field contains all lead source category. IST-45</description>
    <label>Source Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Lead_Source_Category</valueSetName>
    </valueSet>
</CustomField>