force-app/main/default/objects/Contact/fields/I_ST_Lead_Source_sub_category__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Lead_Source_sub_category__c</fullName>
    <description>Created the lead source sub category which is dependent field of Lead source category - IST-45</description>
    <label>Source Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_ST_Lead_Source_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>I_ST_Lead_Source_sub_category</valueSetName>
    </valueSet>
</CustomField>