force-app/main/default/objects/Contact/fields/I_ST_Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Personal_Email__c</fullName>
    <description>Created to allow user to store personal email</description>
    <externalId>true</externalId>
    <inlineHelpText>The personal email for this person.</inlineHelpText>
    <label>Student Lead Email</label>
    <type>Email</type>
</CustomField>