force-app/main/default/objects/Contact/fields/I_ST_Position_Classification__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Position_Classification__c</fullName>
    <description>Created for account Management</description>
    <label>Position Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Mid-Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>