force-app/main/default/objects/Contact/fields/I_ST_Preferred_Channel_of_Communication__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Preferred_Channel_of_Communication__c</fullName>
    <description>Created for IST-35</description>
    <label>Preferred Channel of Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Preferred_Channel_Communication</valueSetName>
    </valueSet>
</CustomField>