force-app/main/default/objects/Contact/fields/I_ST_Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Preferred_Email__c</fullName>
    <description>Created to select which preferred email student wants to select</description>
    <inlineHelpText>The email (Personal, Student, Work) that this Contact prefers you to use.</inlineHelpText>
    <label>Preferred Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Preferred_Email</valueSetName>
    </valueSet>
</CustomField>