force-app/main/default/objects/Contact/fields/I_ST_Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Preferred_Phone__c</fullName>
    <description>Created for IST to selected preferred phone</description>
    <inlineHelpText>The phone (Work, Home, Mobile) that this Contact prefers you to use.</inlineHelpText>
    <label>Preferred Phone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Preferred_Phone</valueSetName>
    </valueSet>
</CustomField>